--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,5 +5,6 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-button routerLink="/alert">Alert</ion-button>
+  <ion-button routerLink="/action-sheet">Action Sheet</ion-button>
 </ion-content>
