--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,15 +1,3 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button
-        defaultHref="/"
-        text="Regresar"
-        color="primary"
-        mode="ios"
-      ></ion-back-button>
-    </ion-buttons>
-    <ion-title>action-sheet</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header [name]="'action sheet'"></app-header>
 
 <ion-content> </ion-content>
