--- a/src/app/pages/alert/alert.page.html
+++ b/src/app/pages/alert/alert.page.html
@@ -1,15 +1,3 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button
-        defaultHref="/"
-        text="back"
-        color="secondary"
-        mode="ios"
-      ></ion-back-button>
-    </ion-buttons>
-    <ion-title>alert</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header [name]="'alert'"></app-header>
 
 <ion-content> </ion-content>
