--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,3 +1,7 @@
 <app-header [name]="'action sheet'"></app-header>
 
-<ion-content> </ion-content>
+<ion-content class="ion-padding">
+  <ion-button (click)="onClick()" expand="block">
+    Mostrar Action Sheet
+  </ion-button>
+</ion-content>
