--- a/src/app/pages/alert/alert.page.html
+++ b/src/app/pages/alert/alert.page.html
@@ -1,3 +1,13 @@
 <app-header [name]="'alert'"></app-header>
 
-<ion-content> </ion-content>
+<ion-content class="ion-padding">
+  <ion-button (click)="presentAlert()" expand="block"> Alert </ion-button>
+
+  <ion-button (click)="presentAlertMultipleButtons()" expand="block">
+    Alert MultiButtons
+  </ion-button>
+
+  <ion-button (click)="presentAlertPrompt()" expand="block">
+    Present Alert Prompt
+  </ion-button>
+</ion-content>
