--- a/src/app/pages/checkbox/checkbox.page.html
+++ b/src/app/pages/checkbox/checkbox.page.html
@@ -11,4 +11,6 @@
       ></ion-checkbox>
     </ion-item>
   </ion-list>
+
+  <ion-button (click)="getData()" expand="block"> Get Data </ion-button>
 </ion-content>
