--- a/src/app/pages/fab/fab.page.html
+++ b/src/app/pages/fab/fab.page.html
@@ -13,11 +13,15 @@
     </ion-fab-button>
 
     <ion-fab-list side="top">
-      <ion-fab-button><ion-icon name="logo-twitter"></ion-icon></ion-fab-button>
-      <ion-fab-button
-        ><ion-icon name="logo-facebook"></ion-icon
+      <ion-fab-button color="twitter"
+        ><ion-icon name="logo-twitter"></ion-icon
       ></ion-fab-button>
-      <ion-fab-button><ion-icon name="logo-youtube"></ion-icon></ion-fab-button>
+      <ion-fab-button
+        ><ion-icon color="facebook" name="logo-facebook"></ion-icon
+      ></ion-fab-button>
+      <ion-fab-button color="youtube"
+        ><ion-icon name="logo-youtube"></ion-icon
+      ></ion-fab-button>
     </ion-fab-list>
     <ion-fab-list side="start">
       <ion-fab-button><ion-icon name="logo-vimeo"></ion-icon></ion-fab-button>
