--- a/src/app/pages/input/input.page.html
+++ b/src/app/pages/input/input.page.html
@@ -1,6 +1,6 @@
 <app-header [name]="name || 'Input Forms'"></app-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <ion-list>
     <ion-list-header>
       <ion-label>Inputs normales</ion-label>
@@ -16,4 +16,37 @@
       <ion-input></ion-input>
     </ion-item>
   </ion-list>
+
+  <form #form="ngForm" (ngSubmit)="onSubmit(form)">
+    <ion-list-header>
+      <ion-label>Form valido: {{form.valid}}</ion-label>
+    </ion-list-header>
+
+    <ion-item>
+      <ion-label>Email:</ion-label>
+      <ion-input
+        type="email"
+        placeholder="Email"
+        required
+        name="email"
+        pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$"
+        [(ngModel)]="usuario.email"
+      ></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Password:</ion-label>
+      <ion-input
+        type="password"
+        placeholder="Contraseña"
+        name="password"
+        required
+        [(ngModel)]="usuario.password"
+      ></ion-input>
+    </ion-item>
+
+    <ion-button type="submit" expand="block" [disabled]="form.invalid">
+      Guardar
+    </ion-button>
+  </form>
 </ion-content>
