--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,24 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu side="start" menuId="first" contentId="main">
+    <ion-header>
+      <ion-toolbar color="primary">
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-menu-toggle *ngFor="let option of options$ | async">
+          <ion-item [routerLink]="option.redirecTo" detail>
+            <ion-icon
+              slot="start"
+              [name]="option.icon"
+              color="secondary"
+            ></ion-icon>
+            {{ option.name }}</ion-item
+          >
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
