--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,10 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="showMenu()">
+        <ion-icon slot="icon-only" name="menu-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>home</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -7,7 +12,7 @@
 <ion-content>
   <ion-list>
     <ion-item
-      *ngFor="let component of components"
+      *ngFor="let component of components$ | async"
       [routerLink]="component.redirecTo"
       detail="true"
     >
