--- a/src/app/pages/grid/grid.page.html
+++ b/src/app/pages/grid/grid.page.html
@@ -1,6 +1,6 @@
 <app-header [name]="'Grid'"></app-header>
 
-<ion-content>
+<ion-content class="ion-padding" fullscreen>
   <ion-grid fixed>
     <ion-row>
       <ion-col size="6">6</ion-col>
