--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -202,7 +202,7 @@
     --ion-color-step-900: #e6e6e6;
     --ion-color-step-950: #f2f2f2;
 
-    --ion-item-background: #000000;
+    --ion-item-background: transparent;
 
     --ion-card-background: #1c1c1d;
   }
@@ -247,7 +247,7 @@
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
 
-    --ion-item-background: #1e1e1e;
+    --ion-item-background: transparent;
 
     --ion-toolbar-background: #1f1f1f;
 
