--- a/src/app/pages/searchbar/searchbar.page.html
+++ b/src/app/pages/searchbar/searchbar.page.html
@@ -1,8 +1,4 @@
-<ion-header class="ion-no-border">
-  <ion-toolbar>
-    <ion-title>Search</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header name="Search"></app-header>
 
 <ion-content class="ion-padding">
   <ion-searchbar
